# intellistant

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOCKER.md  Dockerfile  GITHUB_STRATEGY.md  MACOS_DEPLOYMENT.md  PROJECT_COMPLETE.md  README.md  RELEASE_GUIDE.md  V1.1_ROADMAP.md  WINDOWS_DEPLOYMENT.md  docker-compose.yml  prompt.txt
docs/: .gitkeep  DOCUMENTATION.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  ROADMAP.md  STATUS.md  USER_MANUAL.md
examples/: agent_demo.cpp  coordinator_demo.cpp  mcp_demo.cpp
include/: agent.hpp  agents.hpp  api_server.hpp  coordinator.hpp  llm_client.hpp  mcp_server.hpp  mcp_tools.hpp  mcp_types.hpp
src/: intellistant_cli.cpp  intellistant_server.cpp
tests/: agent_tests.cpp  coordinator_tests.cpp  llm_client_tests.cpp  mcp_tools_tests.cpp
